Fixed detecting NS_ERROR_FILE_NOT_FOUND case when loading URL in Composer (b=93475) and setting new document and base URL when saving file (b=101426), r=brade,akkana, sr=kin